feat: unit tests (#3)